// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapsible /> Controlled Rendering renders closed by default 1`] = `
<div
  className="pgn_collapsible collapsible-card collapsible"
  open={false}
>
  <div
    aria-expanded={false}
    className="collapsible-card-header"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  />
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<Collapsible /> Controlled Rendering renders open by default 1`] = `
<div
  className="pgn_collapsible collapsible-card collapsible"
>
  <div
    aria-expanded={false}
    className="collapsible-card-header"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  />
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<Collapsible /> Uncontrolled Rendering renders closed by default 1`] = `
<div
  className="pgn_collapsible collapsible-card collapsible"
>
  <div
    aria-expanded={false}
    className="collapsible-card-header"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  />
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<Collapsible /> Uncontrolled Rendering renders open by default 1`] = `
<div
  className="pgn_collapsible collapsible-card collapsible is-open"
>
  <div
    aria-expanded={true}
    className="collapsible-card-header"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  />
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="collapsible-card-body"
      >
        <div
          aria-expanded={true}
          className="trigger d-flex align-items-center"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <h4
            className="flex-grow-1"
          >
            A heading
          </h4>
          <span
            aria-hidden={true}
            className="collapsible-card-header-icon"
          >
            -
          </span>
        </div>
        <div
          aria-expanded={true}
          className="close-only"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          Close
        </div>
        <div
          aria-expanded={true}
          className="open-only"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          Open
        </div>
        <div>
          <div>
            <p
              className="example-content"
            >
              Example content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
